Dockerfile fixed, loggin improved and default values added for directory

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
       max-request-size: 215MB # Max Request Size
 
 file-storage-service:
-  upload-directory: ${FILE_DIRECTORY} # All files uploaded through the REST API will be stored in this directory
+  upload-directory: ${FILE_DIRECTORY:/} # All files uploaded through the REST API will be stored in this directory
