--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,4 @@ spring:
 
 file-storage-service:
   upload-directory: ${FILE_DIRECTORY:/} # All files uploaded through the REST API will be stored in this directory
+  access-key: ${ACCESS_KEY:}
